# OpenCL-Optimalization-Test

./: .gitignore  README.md
src/getDeviceInfo/: CMakeLists.txt  get_device_info  get_device_info.cpp
src/optimalizeTest/: CMakeLists.txt  test-use-bin.cpp
src/twoKernel1Queue/: CMakeLists.txt  two_kernel_1q.cpp
src/twoKernel2QuqueConcurrency/: CMakeLists.txt  tow_kernel_2q_concurrency.cpp
src/utility/: COpenCL.cpp  COpenCL.h
